LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Account_History__c/Top_150_Account_History__c.object-meta.xml
<CustomObject>
    <description>When an account is marked as a Top 150, it is added as a record to this object for reporting purposes.</description>
    <label>Top 150 Account History</label>
    <nameField>
        <displayFormat>TOP105HSTR-{000000}</displayFormat>
        <label>Top 150 Account History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 150 Accounts History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>