LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Account_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Top 150 Accounts History</relationshipLabel>
    <relationshipName>Top_150_Accounts_History</relationshipName>
    <type>Lookup</type>
</CustomField>