LWCLearnwithFLOWOrg/force-app/main/default/objects/Top_150_Account_History__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Top_150_Accounts_History1</relationshipName>
    <type>Lookup</type>
</CustomField>